NumberTheory/attempts/287/round2.out
[stderr]
  File "C:\Users\shekh\OneDrive - The University of Sydney (Students)\Desktop\TheErdosProject\TheErdosMachine\NumberTheory\attempts\287\snippet.py", line 8
    remaining, min_val, current = stack.pop()
    ^^^^^^^^^
IndentationError: expected an indented block after 'while' statement on line 7